tests/examples/good/cond/good014.lat
int main() {
    f(0);
    return 0;
}


int f(int a) {
    if (a == 0) {
        return 0;
    } else {
        return 1;
    }
}