tests/examples/bad/function_redeclaration.lat
int main() {
    return 0;
}

int f(int a, int b) {
    return 0;
}

int f(int x) {
    return 1;
}